--- a/src/main/resources/com/example/layouts/hello-view.fxml
+++ b/src/main/resources/com/example/layouts/hello-view.fxml
@@ -5,35 +5,35 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.layouts.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<!--<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"-->
+<!--      fx:controller="com.example.layouts.HelloController">-->
+<!--    <padding>-->
+<!--        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>-->
+<!--    </padding>-->
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+<!--    <Label fx:id="welcomeText"/>-->
+<!--    <Button text="Hello!" onAction="#onHelloButtonClick"/>-->
 
-    <Button text="Button One"/>
-    <Button text="Button Two"/>
-    <Button text="Button Three"/>
-    <Button text="Really Long Button Four"/>
-    <Button text="Button Five"/>
+<!--    <Button text="Button One"/>-->
+<!--    <Button text="Button Two"/>-->
+<!--    <Button text="Button Three"/>-->
+<!--    <Button text="Really Long Button Four"/>-->
+<!--    <Button text="Button Five"/>-->
 
-</VBox>
+<!--</VBox>-->
 
-<!--<?import javafx.scene.layout.GridPane?>-->
-<!--<GridPane alignment="CENTER"  xmlns:fx="http://javafx.com/fxml"-->
-<!--          fx:controller="com.example.layouts.HelloController">-->
-<!--&lt;!&ndash;        this can help debug size problems&ndash;&gt;-->
-<!--&lt;!&ndash;        gridLineVisible = "true">&ndash;&gt;-->
-<!--        -->
-<!--        <Button text="Button One" GridPane.rowIndex="0" GridPane.columnIndex="0"/>-->
-<!--        <Button text="Button Two" GridPane.rowIndex="0" GridPane.columnIndex="1"/>-->
-<!--        <Button text="Button Three" GridPane.rowIndex="1" GridPane.columnIndex="0"/>-->
-<!--        <Button text="Really Long Button Four" GridPane.rowIndex="1" GridPane.columnIndex="1"/>-->
-<!--        <Button text="Button Five" GridPane.rowIndex="2" GridPane.columnIndex="0"/>-->
+<?import javafx.scene.layout.GridPane?>
+<GridPane alignment="TOP_CENTER"  xmlns:fx="http://javafx.com/fxml"
+          fx:controller="com.example.layouts.HelloController">
+<!--        this can help debug size problems-->
+<!--        gridLineVisible = "true">-->
+
+        <Button text="Button One" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+        <Button text="Button Two" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+        <Button text="Button Three" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+        <Button text="Really Long Button Four" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <Button text="Button Five" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
 
 
 
-<!--</GridPane>-->
+</GridPane>
