Hbox Example Push

--- a/src/main/resources/com/example/layouts/hello-view.fxml
+++ b/src/main/resources/com/example/layouts/hello-view.fxml
@@ -22,18 +22,42 @@
 
 <!--</VBox>-->
 
-<?import javafx.scene.layout.GridPane?>
-<GridPane alignment="TOP_CENTER"  xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.layouts.HelloController">
-<!--        this can help debug size problems-->
-<!--        gridLineVisible = "true">-->
+<!--<?import javafx.scene.layout.GridPane?>-->
 
-        <Button text="Button One" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <Button text="Button Two" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-        <Button text="Button Three" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-        <Button text="Really Long Button Four" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-        <Button text="Button Five" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+<!--<GridPane alignment="TOP_CENTER"  xmlns:fx="http://javafx.com/fxml"-->
+<!--          fx:controller="com.example.layouts.HelloController">-->
+<!--&lt;!&ndash;        this can help debug size problems&ndash;&gt;-->
+<!--&lt;!&ndash;        gridLineVisible = "true">&ndash;&gt;-->
+<!--        -->
+
+<!--&lt;!&ndash;        <Button text="Button One" GridPane.rowIndex="0" GridPane.columnIndex="0"&ndash;&gt;-->
+<!--&lt;!&ndash;        GridPane.halignment="RIGHT" />&ndash;&gt;-->
+<!--&lt;!&ndash;        <Button text="Button Two" GridPane.rowIndex="0" GridPane.columnIndex="1"/>&ndash;&gt;-->
+<!--&lt;!&ndash;        <Button text="Button Three" GridPane.rowIndex="1" GridPane.columnIndex="0"/>&ndash;&gt;-->
+<!--&lt;!&ndash;        <Button text="Really Long Button Four" GridPane.rowIndex="1" GridPane.columnIndex="1"/>&ndash;&gt;-->
+<!--&lt;!&ndash;        <Button text="Button Five" GridPane.rowIndex="2" GridPane.columnIndex="0"/>&ndash;&gt;-->
+
+<!--</GridPane>-->
+
+<?import javafx.scene.layout.HBox?>
+<HBox alignment="BOTTOM_RIGHT"  xmlns:fx="http://javafx.com/fxml"
+      fx:controller="com.example.layouts.HelloController"
+      style="-fx-border-color: red; -fx-border-width: 3; -fx-border-style: dashed;"
+      spacing="10"  >
+        <padding>
+                <Insets bottom="10" right="10" />
+        </padding>
+        <Button text="Okay" prefWidth="90" />
+        <Button text="Cancel" prefWidth="90" />
+        <Button text="Help" prefWidth="90" />
+</HBox>
 
 
 
-</GridPane>
+
+
+
+
+
+
+
